--- a/assignments/assignment_1_cocktail_bar_s.Rmd
+++ b/assignments/assignment_1_cocktail_bar_s.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Assignment 1: The cocktail bar (data transformation and manipulation)"
-author: "Tamas Nagy"
+author: "Tamas Nagy (Resolved by David Kelemen)"
 output: html_document
 editor_options: 
   chunk_output_type: console
@@ -32,7 +32,7 @@ Note: There are several different ways to solve these tasks, feel free to come u
 Read the cocktail dataset from: <https://github.com/nthun/cocktail-balance> You can also find the codebook there.
 
 ```{r}
-
+cocktail_dataset <- read_tsv("https://raw.githubusercontent.com/nthun/cocktail-balance/refs/heads/master/cocktail_data.tsv")
 ```
 
 ## 2. Transform the data table and clean the ingredient variable!
@@ -40,6 +40,21 @@ Read the cocktail dataset from: <https://github.com/nthun/cocktail-balance> You 
 The ingredients are currently in a single cell for each cocktail. It would be better to put them in separate rows. Also, the variable should be cleaned of all quantities (e.g. 1/2 oz, 2 dashes, etc.), and the indicator of alcohol content (e.g. 47.3% abv). You will need to use this cleaned table in later tasks.
 
 ```{r}
+
+library(dplyr)
+library(tidyr)
+library(stringr)
+
+num_pattern <- "(\\d+\\s)?(\\d+((\\/|\\.)\\d+)?)"
+unit_pattern <- "(dash|dashes|drop|drops|oz|bsp)"
+percent_pattern <- "(\\(\\d+(\\.\\d+)?%\\sabv\\))"
+clean_regex <- paste0(num_pattern, "\\s", unit_pattern, "\\s|\\s", percent_pattern)
+
+cleaned_dataset <- cocktail_dataset %>%
+  separate_rows(ingredients, sep = "<br/>|<b4/>|<br>") %>%
+  mutate(ingredients = str_remove_all(ingredients, clean_regex)) %>%
+  mutate(ingredients = str_trim(ingredients)) %>%
+  distinct(name, ingredients, .keep_all = TRUE)
 
 ```
 
@@ -49,6 +64,13 @@ Before opening the bar, you need to find a reliable supplier that has all the in
 
 ```{r}
 
+ingredient_list <- cleaned_dataset %>%
+  distinct(ingredients) %>%
+  arrange(ingredients) %>%
+  pull(ingredients)
+
+print(ingredient_list)
+
 ```
 
 ## 4. Number of unique ingredients
@@ -57,6 +79,9 @@ How many different ingredients you will need?
 
 ```{r}
 
+number_of_ingredients <- length(ingredient_list)
+
+print(number_of_ingredients)
 ```
 
 ## 5. What are the top 10 ingredients?
@@ -64,6 +89,14 @@ How many different ingredients you will need?
 What are the 10 most frequently used ingredients? If there are ties, you can list more than 10.
 
 ```{r}
+
+ingredient_frequency <- cleaned_dataset %>%
+  count(ingredients, sort = TRUE)
+
+top_10_ingredients <- ingredient_frequency %>%
+  filter(n >= top_n(ingredient_frequency, 10)$n[10])
+
+print(top_10_ingredients)
 
 ```
 
@@ -73,11 +106,25 @@ Count the number of ingredients and filter all the cocktails that has that many.
 
 ```{r}
 
+cocktails_with_most_ingredients <- cleaned_dataset %>%
+  count(name, sort = TRUE) %>%
+  filter(n == max(n))
+
+print(cocktails_with_most_ingredients)
+
 ```
 
 ## 7. How many ingredients appear in only one cocktail (rare ingredient)?
 
 ```{r}
+
+rare_ingredients <- cleaned_dataset %>%
+  count(ingredients, sort = TRUE) %>%
+  filter(n == 1) %>%
+  pull(ingredients)
+
+print(rare_ingredients)
+print(length(rare_ingredients))
 
 ```
 
@@ -85,12 +132,27 @@ Count the number of ingredients and filter all the cocktails that has that many.
 
 ```{r}
 
+cocktails_with_rare_ingredient <- cleaned_dataset %>%
+  filter(ingredients %in% rare_ingredients) %>%
+  distinct(name) %>%
+  arrange(name) %>%
+  pull(name)
+
+print(cocktails_with_rare_ingredient)
+
 ```
 
 ## 9. What are the cocktails without rare ingredients?
 
 ```{r}
-  
+
+cocktails_without_rare_ingredients <- setdiff(
+  cocktail_dataset %>% distinct(name) %>% arrange(name) %>% pull(name),
+  cocktails_with_rare_ingredient
+  )
+
+print(cocktails_without_rare_ingredients)
+
 ```
 
 ## 10. Create a cheat sheet for the bartender!
@@ -98,6 +160,23 @@ Count the number of ingredients and filter all the cocktails that has that many.
 Create a matrix that shows all cocktail names as rows and all ingredients as columns. When a cocktail requires an ingredient, there should be an "X" in the cell, otherwise, the cell should remain empty. Example:
 
 ```{r}
+
+cocktail_cheat_sheet <- 
+  cleaned_dataset %>% 
+  mutate(present = "X") %>%
+  pivot_wider(
+    id_cols = name,
+    names_from = ingredients,
+    values_from = present
+  ) %>%
+  mutate_all(~replace_na(., ""))
+
+# Prettify the matrix
+cheat_sheet <- cocktail_cheat_sheet %>%
+  arrange(name) %>%
+  select(name, sort(setdiff(names(cocktail_cheat_sheet), "name")))
+
+knitr::kable(cheat_sheet)
 
 ```
 
